fix(chat): aligns archive link correctly.

--- a/src/styles/views/messages.scss
+++ b/src/styles/views/messages.scss
@@ -252,7 +252,7 @@ $suggests-max-height: 200px;
       }
 
       .archive-link {
-        .rt-link-link { display: inline-block; }
+        .rt-link-link { display: inline-flex; }
       }
     }
 
